# huskybeammap

./: Cargo.toml  README.md  demo.py
huskybeammap-app/: Cargo.toml  Trunk.toml  index.html
huskybeammap-app/js/: manifest.json
huskybeammap-app/src/: main.rs
huskybeammap-proxy/: Cargo.toml
huskybeammap-proxy/src/: main.rs
huskybeammap-types/: Cargo.toml
huskybeammap-types/src/: lib.rs
src/: main.rs
