[package]
name = "huskybeammap-app"
version = "0.1.0"
edition = "2021"

[dependencies]
egui-macroquad = "0.17.3"
ewebsock = "0.8.0"
facet = "0.29.1"
facet-json = "0.29.1"
huskybeammap-types = { version = "0.1.0", path = "../huskybeammap-types" }
macroquad = "0.4.14"

[target.wasm32-unknown-unknown.dependencies]
sapp-console-log = "0.1"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.7"

[package.metadata.android]
android_version = 36
target_sdk_version = 36
min_sdk_version = 18

build_targets = [ "aarch64-linux-android" ]
package_name = "edu.ucsb.huskybeammap"
label = "Husky Beammap"
version_code = 3
version_name = "2.1"
fullscreen = true
opengles_version_major = 3
opengles_version_minor = 2

[[package.metadata.android.permission]]
name = "android.permission.INTERNET"

[package.metadata.android.application_attributes]
"android:debuggable" = "true"
"android:hardwareAccelerated" = "true"

[package.metadata.android.activity_attributes]
"android:screenOrientation" = "unspecified"
"android:uiOptions" = "none"
"android:exported" =  "true"
